--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,18 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
+    //追加
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
+    // 中略
+
+
+    dependencies {
+        compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
+    }
+    //ここまで
+
     defaultConfig {
         applicationId "org.t_robop.kido.temperature2"
         minSdkVersion 15
@@ -23,4 +35,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
